<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"  >

 <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="horizontal">
	<TextView style="@style/SettingCal.PrayerName" android:text="@string/method" />  
	<Spinner android:id="@+id/set_cal_method"  android:layout_width="fill_parent" 
	    android:layout_height="32dip" android:background="@android:color/holo_green_light"
	    android:spinnerMode="dropdown"
	/>
 </LinearLayout>

 <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="horizontal"  >

  <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"  >
  <TextView style="@style/SettingNotif.PrayerName" android:text="@string/transliteration" />
  <TextView style="@style/SettingNotif.PrayerName" android:text="@string/translation" />
  <TextView style="@style/SettingNotif.PrayerName" android:text="@string/tafsir" />
  <TextView style="@style/SettingNotif.PrayerName" android:text="@string/comment" />
  </LinearLayout>

  <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"  >
<ImageView android:id="@+id/set_transliteration"  android:layout_width="fill_parent" android:layout_height="32dip" android:src="@drawable/speaker_off" />
<ImageView android:id="@+id/set_translation" android:layout_width="fill_parent" android:layout_height="32dip" android:src="@drawable/speaker_off" />
<ImageView android:id="@+id/set_tafsir" android:layout_width="fill_parent"  android:layout_height="32dip"  android:src="@drawable/speaker_off" />
<ImageView android:id="@+id/set_comment" android:layout_width="fill_parent"  android:layout_height="32dip"  android:src="@drawable/speaker_off" />
  </LinearLayout>

  <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_marginLeft="10dip"
  android:orientation="vertical"  >
<EditText android:id="@+id/set_cal_fadjr"  android:layout_width="64dip" android:layout_height="32dip" android:text="0" android:textColor="#000000" android:inputType="numberSigned" />
<EditText android:id="@+id/set_cal_shurooq" android:layout_width="64dip" android:layout_height="32dip" android:text="0" android:textColor="#000000" android:inputType="numberSigned" />
<EditText android:id="@+id/set_cal_zuhr" android:layout_width="64dip"  android:layout_height="32dip" android:text="0" android:textColor="#000000" android:inputType="numberSigned"  />
<EditText android:id="@+id/set_cal_asr" android:layout_width="64dip"  android:layout_height="32dip" android:text="0" android:textColor="#000000" android:inputType="numberSigned" />
  </LinearLayout>

  <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="vertical"  >
<TextView android:text="@string/minute" style="@style/SettingCal.Min" />
<TextView android:text="@string/minute" style="@style/SettingCal.Min" />
<TextView android:text="@string/minute" style="@style/SettingCal.Min" />
<TextView android:text="@string/minute" style="@style/SettingCal.Min" />
<TextView android:text="@string/minute" style="@style/SettingCal.Min" />
<TextView android:text="@string/minute" style="@style/SettingCal.Min" />
  </LinearLayout>

 </LinearLayout>
 <LinearLayout
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:orientation="horizontal"  >
  <TextView style="@style/SettingNotif.PrayerName" android:text="@string/alert" android:height="32dip"/>   
  <EditText android:id="@+id/alert_before" android:layout_width="72dip" android:layout_height="32dip" android:text="0" android:inputType="numberSigned"  />
  <TextView style="@style/SettingNotif.PrayerName" android:text="@string/minute" />
 </LinearLayout>
  
 <LinearLayout 
   android:orientation="horizontal"
   android:layout_width="280dip"
   android:layout_height="wrap_content"
   android:layout_marginTop="10dip"
   android:layout_gravity="center"	 >
   <Button android:id="@+id/set_notif_reset"
  	android:text="@string/clear"
  	android:layout_width= "120dip"
  	android:layout_height="wrap_content"	
	android:gravity="center_horizontal|center_vertical" />
   <Button android:id="@+id/set_notif_save"
  	android:text="@string/save"
  	android:layout_width= "120dip"
  	android:layout_height="wrap_content"	
	android:gravity="center_horizontal|center_vertical" />
 </LinearLayout>
</LinearLayout>